--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -16,7 +16,7 @@
                 <a href="#">Save</a>
             </li>
             <li>
-                <a href="#">Save As...</a>
+                <a href="#">Save As…</a>
             </li>
         </ul>
     </div>
