--- a/purple-pill/templates/instances.html
+++ b/purple-pill/templates/instances.html
@@ -23,14 +23,13 @@
                 <span class="list-view-col rename" ng-model="instance.ag" ng-click="toggleDisplay(instance)" ng-class="{'selected': instance.display}" style="font-family:'{{instance.fontFamily}}'; font-weight:{{instance.fontWeight}};"></span>
                 <span class="list-edit-col rename" ng-model="instance.name" ng-click="setCurrentInstance(instance)" ng-class="{'selected': instance.edit}"></span>
                 <div class="export-col" ng-click="instance.exportFont = !instance.exportFont">
-                    <div class="export-checkmark"><span ng-if="instance.exportFont">✓</span><span ng-if="!instance.exportFont">&nbsp;</span></div>
-                    <div class="opentype-features">&nbsp;</div>
+                    <span ng-if="instance.exportFont">✓</span>
                 </div>
             </li>
         </ul>
         
         
-        <div style="padding: 20px">
+        <div style="padding: 20px;">
             <div ng-repeat="instance in data.families[0].instances track by instance.id">
                 <b>{{instance.id}}</b>
                 <div>axes: <span ng-repeat="axis in instance.axes">{{axis.value}} | </span></div>
