--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -11,19 +11,19 @@
     </div>
 </localmenu>
 
-<div class="panel-border panel-border-with-menu">
+<div class="panel-border panel-border-with-menu" ng-class="{'inactive-master': data.viewState != 0}">
     <div id="masters-list">
         <ul>
             <li ng-repeat="sequence in data.sequences">
                 <ul ui-sortable="sortableOptionsMasters" ng-model="sequence.masters" class="list-ul">
-                    <li master="{{master.id}}" sequence="{{sequence.id}}" display="{{master.display}}" ng-repeat="master in sequence.masters" class="list-li" ng-class="{'selected': master.edit[data.viewState]}">
+                    <li master="{{master.id}}" sequence="{{sequence.id}}" display="{{master.display}}" ng-repeat="master in sequence.masters" class="list-li" ng-class="{'selected': master.edit}">
                         <span class="list-sequence-col" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
                             <svg height="12" width="12">
                                 <circle cx="6" cy="6" r="6" class="diamond">
                             </svg> 
                         </span>
                         <span class="list-view-col ag" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
-                        <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit[data.viewState]}"></span>
+                        <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit}"></span>
                     </li>
                 </ul>
             </li>
