--- a/purple-pill/templates/instances.html
+++ b/purple-pill/templates/instances.html
@@ -21,7 +21,7 @@
                     </svg> 
                 </span>
                 <span class="list-view-col rename" ng-model="instance.ag" ng-click="toggleDisplay(instance)" ng-class="{'selected': instance.display}" style="font-family:'{{instance.fontFamily}}'; font-weight:{{instance.fontWeight}};"></span>
-                <span class="list-edit-col rename" ng-model="instance.name" ng-click="setCurrentInstance(instance)" ng-class="{'selected': instance.edit}"></span>
+                <span class="list-edit-col rename" ng-model="instance.displayName" ng-click="setCurrentInstance(instance)" ng-class="{'selected': instance.edit}"></span>
                 <div class="export-col" ng-click="instance.exportFont = !instance.exportFont">
                     <span ng-if="instance.exportFont">✓</span>
                 </div>
