#347 ag for instance list real svgs

--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -22,7 +22,7 @@
                                 <circle cx="6" cy="6" r="6" class="diamond">
                             </svg> 
                         </span>
-                        <span class="list-view-col ag" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
+                        <span class="list-view-col ag" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}"></span>
                         <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit}"></span>
                     </li>
                 </ul>
