--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -11,7 +11,7 @@
     </div>
 </localmenu>
 
-<div class="panel-border panel-border-with-menu" ng-class="{'inactive-master': data.viewState != 0}">
+<div class="panel-border panel-border-with-menu" ng-class="{'inactive-master': data.view.viewState != 0}">
     <div id="masters-list">
         <ul>
             <li ng-repeat="sequence in data.sequences">
