--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -24,14 +24,19 @@
                         <div class="parameter-key"><span ng-if="$index == 0">{{parameter.displayName}}</span></div>
                         <div class="parameter-operator">{{operator.name}}</div>
                         <div class="operator-value">
-                            <input ng-model="operator.value" ng-blur="data.changeParameter(parameter.name, operator.name, operator.value, 'glyph')">    
+                            <span ng-if="!operator.range">
+                                <input ng-model="operator.low" ng-blur="data.changeParameter(parameter.name, operator.name, operator.low, 'glyph')"> 
+                            </span>
+                            <span ng-if="operator.range"> 
+                                <input ng-model="operator.low" ng-blur=""> 
+                                to <input ng-model="operator.high" ng-blur="">
+                            </span>
                         </div>
                     </div>               
                 </div>
             </div>
         </div>
     </div>
-    
     
     
     <div id="parameters-control-panel" class="control-panel" ng-if="data.parametersPanel > 0" ng-style="{'top': parameterPanelTop, 'left': parameterPanelLeft}">
