definition: changed glyph.value to glyph.name

--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -73,7 +73,7 @@
                 <div class="inspector-branche" ng-repeat="glyph in master.glyphs">
                     <div class="inspector-header">
                         <arrow></arrow>
-                        <span>{{glyph.value}}</span>
+                        <span>{{glyph.name}}</span>
                     </div>
                 </div>
             </div>
